--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
 
         <activity android:name=".activity.CircleProgressActivity"
             android:launchMode="singleTop"/>
+
+        <activity android:name=".rxjava.Demo1Activity"/>
     </application>
 
 </manifest>
